--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -1,36 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_home"
-            android:title="Home"
-            app:itemBackground="@color/white"/>
-        <item
-            android:id="@+id/nav_bookshelf"
-            android:icon="@drawable/ic_menu_bookshelf"
-            android:title="Bookshelf" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_theme"
                 android:icon="@drawable/ic_menu_theme"
                 android:title="Theme" />
+
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_about"
+                android:icon="@drawable/ic_proj_info"
+                android:title="About" />
         </menu>
     </item>
 
