Improve the splash page

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         pv:pv_host_text="Douban"
+        pv:pv_host_text_size="40sp"
         pv:pv_particle_text="Book"
-        pv:pv_particle_text_size="12sp"
+        pv:pv_particle_text_size="20sp"
         pv:pv_text_color="#FFF"
         pv:pv_background_color="?attr/colorPrimary"
         pv:pv_text_anim_time="500"
